discontinuity euler filter doesn't resolve gimble lock problems #35668

Closed
opened 2013-06-08 10:15:10 +02:00 by S S · 6 comments

%%%--- Operating System, Graphics card ---
windows 7 64bit, GTX650ti

- Blender version with error, and version that worked ---

from blender 2.67b 64bit to 2.64a 64bit with error

- Short description of error ---

I make an animation, in which a circle rotates and has problem with gimbal lock. I want to try the "discontinuity euler filter" in the graph editor. But it doesn't work.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1,open the file, you can see I have made a rotating circle. In the graph editor, use the "discontinuity euler filter".

%%%

%%%--- Operating System, Graphics card --- windows 7 64bit, GTX650ti - Blender version with error, and version that worked --- from blender 2.67b 64bit to 2.64a 64bit with error - Short description of error --- I make an animation, in which a circle rotates and has problem with gimbal lock. I want to try the "discontinuity euler filter" in the graph editor. But it doesn't work. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1,open the file, you can see I have made a rotating circle. In the graph editor, use the "discontinuity euler filter". %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I also make a file in which the animation is correct. It is here: http://www.pasteall.org/blend/21968%%%

%%%I also make a file in which the animation is correct. It is here: http://www.pasteall.org/blend/21968%%%
Member

%%%The discontinuity filter was only really intended to fix 180 degree flips/jumps arising from baking sim results to euler rotation curves. It doesn't actually perform any other fancy logic to resolve the many other problems which can arise from gimble lock and so forth. In that regard, the tooltip for this operator is actually misleading. %%%

%%%The discontinuity filter was only really intended to fix 180 degree flips/jumps arising from baking sim results to euler rotation curves. It doesn't actually perform any other fancy logic to resolve the many other problems which can arise from gimble lock and so forth. In that regard, the tooltip for this operator is actually misleading. %%%
Member

%%%Joshua: you fix the tooltip then?

Gimbal Locks is a feature of eulers, we cannot do anything about it really, apart from suggesting to use axis-rotation, or quaternions.%%%

%%%Joshua: you fix the tooltip then? Gimbal Locks is a feature of eulers, we cannot do anything about it really, apart from suggesting to use axis-rotation, or quaternions.%%%
Member

%%%Fixed the problem with the misleading tooltip.%%%

%%%Fixed the problem with the misleading tooltip.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35668
No description provided.